<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/latitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/latitudeUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/latitudeText"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="0.00"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/longitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitudeText"
        android:text="@string/longitude"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/longitudeUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/longitudeText"
        android:layout_below="@id/latitudeUpdate"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="0.00"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/locationController"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/longitudeUpdate"
        android:text="@string/resume"
        android:onClick="toggleLocationUpdates" />

    <EditText
        android:id="@+id/latitudeTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationController"
        android:hint="@string/target_latitude"/>

    <EditText
        android:id="@+id/longitudeTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitudeTarget"
        android:hint="@string/target_longitude"/>

    <Button
        android:id="@+id/notificationController"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/longitudeTarget"
        android:layout_centerHorizontal="true"
        android:text="@string/get_distance"
        android:onClick="compareLocation" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationController"
        android:text="The distance between both Locations is \n0 meters"
        android:gravity="center"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationController"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
